--- a/client/src/app/app.scss
+++ b/client/src/app/app.scss
@@ -1,9 +1,12 @@
-.main {
-  background: #1e1e1e;
+html, body {
+  height: 100vh;
+  width: 100vh;
+  margin: 0;
+  display: block;
 }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+app-root {
+  height: 100vh;
+  width: 100vh;
+  display: block;
 }
