--- a/client/src/app/pages/game.component/game.component.scss
+++ b/client/src/app/pages/game.component/game.component.scss
@@ -1,4 +1,18 @@
 .game-page {
+  position: fixed;
+  inset: 0;
+  min-height: 100vh;
   width: 100vw;
-  height: 100vh;
+  background: radial-gradient(
+    circle at top,
+    #1e293b,
+    #020617
+  );
+  background-size: auto 100%;
+  display: flex;
+  flex-direction: row;
+
+  //Just for the moment need someone to do UI :(
+  padding-top: 5vh;
+  padding-left: 5vh;
 }
