--- a/client/src/app/components/board/board.component.html
+++ b/client/src/app/components/board/board.component.html
@@ -1,6 +1,7 @@
-<div class="board">
+<div class="board" appNoSelect cdkDropListGroup>
   @for (square of gameService.board; track $index; let i = $index) {
     <div
+      appNoSelect
       (click)="onClickSquare(square, i)"
       (keydown.enter)="onClickSquare(square, i)"
       (keydown.space)="onClickSquare(square, i)"
@@ -8,9 +9,33 @@
       [class.light]="isLightSquare(i)"
       [class.dark]="!isLightSquare(i)"
       [class.highlighted]="isHighlighted(i)"
+      cdkDropList
+      [cdkDropListData]="i"
+      (cdkDropListDropped)="onDrop($event)"
+      cdkDropListSortingDisabled
     >
     @if (square !== 0) {
-      <img [src]="getPieceImage(square)" alt="piece" />
+      <img 
+        appNoSelect
+        cdkDrag
+        [cdkDragDisabled]="!isItMyTurn(square)"
+        (cdkDragStarted)="onDragStart(square, i)"
+        [src]="getPieceImage(square)"
+        alt="piece" 
+      />
+      <div *cdkDragPlaceholder style="width:0; height:0; min-width:0; min-height:0;"></div>
+      <ng-template #piecePreview>
+        <img
+          [src]="getPieceImage(square)"
+          alt="dragging piece"
+          style="
+            width: 85%;
+            height: 85%;
+            object-fit: contain;
+            pointer-events: none;
+          "
+        />
+      </ng-template>
     }
     </div>
   }
