start captured pieces

--- a/client/src/app/pages/game.component/game.component.html
+++ b/client/src/app/pages/game.component/game.component.html
@@ -1,3 +1,4 @@
 <div class="game-page">
   <app-board class="board"></app-board>
+  <app-captured-pieces [captured]="captured[0].captured!"></app-captured-pieces>
 </div>
