--- a/client/src/app/components/board/board.component.scss
+++ b/client/src/app/components/board/board.component.scss
@@ -11,6 +11,14 @@
   border-radius: 16px; 
   background-color: #333;
   overflow: hidden;
+
+  &.flipped {
+    transform: rotate(180deg);
+
+    .square {
+      transform: rotate(180deg);
+    }
+  }
 }
 
 .square.light {
